# stutterbox

./: CHANGELOG.md  LICENSE  PROJECT_CHARTER.md  PROJ_DOC.md  README.md  THIRD_PARTY_NOTICES.md  build.bat  checklist.txt  main.py  pyproject.toml  run.bat  stutterbox.spec
core/: activity.py  capture.py  codec.py  config.py  container.py  diff.py  errors.py  hashchain.py  io.py  logging_setup.py  model.py  paths.py  player.py  recorder.py  redaction.py  report.py
docs/: BUILD_WEEK_SUBMISSION.md  bug-hunt-report.md  real-display-qa.md  release-confidence-v0.1.0.md  release-verification-v0.2.0.md
migrations/: 001_initial.sql
packaging/: READ-ME-FIRST.txt
resources/: theme.qss
samples/: SIZE_COMPARISON.md  generate_sample.py  sample_coding_session.stut
tests/: conftest.py  test_activity.py  test_capture.py  test_codec.py  test_container.py  test_diff.py  test_hashchain.py  test_paths.py  test_player.py  test_recorder.py  test_recorder_pacing.py  test_redaction.py  test_report.py  test_roundtrip.py  test_shutdown.py  test_smoke.py
tools/: _verify_real_capture.py
ui/: capture_worker.py  dialogs.py  frame_view.py  heatmap.py  main_window.py  qt_image.py  report_dialog.py  theme.py  timeline.py
